--- a/While Loop.ipynb
+++ b/While Loop.ipynb
@@ -185,9 +185,9 @@
     " - Prime Factorization of $a$ is $12=2^{2}\\times{3}$\n",
     " - Prime Factorization of $b$ is $18=2\\times{3^{2}}$\n",
     "\n",
-    "GCD $=2\\times{3}=6$ $|$$\\textrm{Extract minimum power}$\n",
-    "        </br>\n",
-    "LCD $=2^{2}\\times{3^{2}}=36$ $|$$\\textrm{Extract maximum power}$\n",
+    "$$GCD =2\\times{3}=6 |\\textrm{Extract minimum power}$$\n",
+    "        \n",
+    "$$ LCD =2^{2}\\times{3^{2}}=36 |\\textrm{Extract maximum power}$$\n",
     "        \n",
     "\n",
     "We can see that,\n",
