--- a/For Loop.ipynb
+++ b/For Loop.ipynb
@@ -50,11 +50,11 @@
    "source": [
     "|n Factorial|$$n (n - 1) (n - 2) ....1$$\t|$$n! = n × (n - 1)!$$\t|Result|\n",
     "|-------|-------|------|-----|\n",
-    "|1 Factorial|\t1\t|1\t|1|\n",
-    "2 Factorial|\t2 × 1|\t= 2 × 1!|\t= 2|\n",
-    "3 Factorial\t|3 × 2 × 1\t|= 3 × 2!|\t= 6\n",
-    "4 Factorial\t|4 × 3 × 2 × 1|\t= 4 × 3!\t|= 24|\n",
-    "5 Factorial\t|5 × 4 × 3 × 2 × 1\t|= 5 × 4!\t|= 120|"
+    "|1 Factorial|1\t|1|1|\n",
+    "|2 Factorial|2 × 1|\t= 2 × 1!|= 2|\n",
+    "|3 Factorial|3 × 2 × 1|= 3 × 2!|= 6|\n",
+    "|4 Factorial|4 × 3 × 2 × 1|\t= 4 × 3!|= 24|\n",
+    "|5 Factorial|5 × 4 × 3 × 2 × 1\t|= 5 × 4!|= 120|"
    ]
   },
   {
